--- a/packages/client/src/index.scss
+++ b/packages/client/src/index.scss
@@ -1,5 +1,10 @@
 @import "./theme";
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   color: $color-text;
   margin: 0;
